kubernetes/overlays/eks-alb/deployment-image-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bizcloud-ai
spec:
  template:
    spec:
      containers:
      - name: bizcloud-ai
        image: 168852252849.dkr.ecr.us-east-2.amazonaws.com/bizcloud-ai:v2
