kubernetes/overlays/eks-alb/service-clusterip-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: bizcloud-ai
spec:
  type: ClusterIP
